samples/_failures_safe/1761088677_34df5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31384555.c: In function ‘main’:
./samples/SAFE/__tmp_31384555.c:142:16: error: missing terminating " character
  142 |         printf("
      |                ^
./samples/SAFE/__tmp_31384555.c:142:9: error: expected expression at end of input
  142 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_31384555.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31384555.c:142:9: error: expected declaration or statement at end of input
